# hf-inference

./: README.md  manifest.json  pyproject.toml
src/hf_inference/: cli.py
